--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.1.0",
+    "@vaadin/router": "^1.7.4",
     "autoprefixer": "^10.4.0",
     "lit": "^2.0.2",
     "npm-run-all": "^4.1.5",
