--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rollup": "^2.61.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-workbox": "^6.2.0",
     "serve": "^11.3.2",
     "tailwindcss": "^3.0.7"
   }
