--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  get: ^4.6.1
+  responsive_grid: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
