--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  adaptive_navigation: ^0.0.5
 
 dev_dependencies:
   flutter_test:
