--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@smcloudstore/generic-s3": "^0.2.0",
     "cookie-parser": "~1.4.4",
+    "crypto-js": "^4.1.1",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express-http-proxy": "^1.6.3",
+    "morgan": "~1.9.1",
+    "smcloudstore": "^0.2.1"
   }
 }
