--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,9 @@
-S3_FULL_URL=https://somebucketname.s3.us-west-000.backblazeb2.com
+S3_ENDPOINT=s3.us-west-000.backblazeb2.com
 S3_KEY_ID=023203202303203203203030
 S3_APPLICATION_KEY=56ads4f56ds4f65afd4s65af4ds65f4sd56a4f6a5sd46f4ds6f4
 S3_BUCKET=somebucketname // May have to make this all lowercase
 S3_REGION=us-west-000
+S3_PATH_STYLE=false //true if using old path style bucket. best to leave as false
 
 
 MODE=dev //dev or prod
