Converted. to module & added preprocess

--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,6 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "smcloudstore": "^0.2.1",
-    "uuid": "^8.3.2",
-    "webp-converter": "^2.3.3"
+    "uuid": "^8.3.2"
   }
 }
