--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -31,12 +31,9 @@ dependencies:
     sdk: flutter
   get: ^4.6.1
   responsive_grid: ^2.0.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   adaptive_navigation: ^0.0.5
+  go_router: ^3.0.1
 
 dev_dependencies:
   flutter_test:
