--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^7.0.0",
+    "mongoose": "^6.2.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "smcloudstore": "^0.2.1",
