--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node ./bin/www.js"
+    "start": "node ./bin/www.js",
+    "start:s3": "minio server ./localS3",
+    "start:db": "brew services start mongodb-community"
   },
   "dependencies": {
     "@smcloudstore/generic-s3": "^0.2.0",
@@ -15,9 +17,11 @@
     "express": "~4.16.1",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^7.0.0",
+    "mongodb-queue-up": "^5.0.1",
     "mongoose": "^6.2.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "sharp": "^0.30.2",
     "smcloudstore": "^0.2.1",
     "uuid": "^8.3.2"
   }
