added refresh tokens

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,7 +3,7 @@ S3_KEY_ID=023203202303203203203030
 S3_APPLICATION_KEY=56ads4f56ds4f65afd4s65af4ds65f4sd56a4f6a5sd46f4ds6f4
 S3_BUCKET=somebucketname // May have to make this all lowercase
 S3_REGION=us-west-000
-S3_PATH_STYLE=false //true if using old path style bucket. best to leave as false
+S3_PATH_STYLE=false //true if using old path style bucket. best to leave as false (for local development or hosting best set to true)
 S3_PORT=443 //not required
 S3_USESSL=true //not required
 
@@ -11,3 +11,7 @@ MODE=dev //dev or prod
 
 
 MONGODB_CONNECTION_STRING=mongodb://localhost:27017/FamilyLine
+
+AUTH_ACCESS_TOKEN_TIMEOUT=600 //10 m (in seconds)
+AUTH_REFRESH_TOKEN_TIMEOUT=7776000 //90 days (in seconds) 
+AUTH_JWT_PRIVATE_KEY=jwtRS256.key
