--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,13 @@
     "express": "~4.16.1",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^7.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb-queue-up": "^5.0.1",
     "mongoose": "^6.2.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "passport": "^0.5.2",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "sharp": "^0.30.2",
     "smcloudstore": "^0.2.1",
