--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   adaptive_navigation: ^0.0.5
   go_router: ^3.0.1
+  http: ^0.13.4
+  hive: ^2.0.6
+  hive_flutter: ^1.1.0
+  flutter_secure_storage: ^5.0.2
+  jwt_decoder: ^2.0.1
+
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +51,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  hive_generator: ^1.1.2
+  build_runner: ^2.1.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+# BUILD COMMANDS 
+## Generators
+# flutter pub run build_runner build
 
 # The following section is specific to Flutter.
 flutter:
