--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^5.0.2
   jwt_decoder: ^2.0.1
+  flutter_blurhash: ^0.6.4
 
 
 dev_dependencies:
