converting to replecaset

--- a/encoder/.env.example
+++ b/encoder/.env.example
@@ -10,4 +10,4 @@ S3_USESSL=true //not required
 MODE=dev //dev or prod
 
 
-MONGODB_CONNECTION_STRING=mongodb://localhost:27017/FamilyLine
+MONGODB_CONNECTION_STRING=mongodb://127.0.0.1:27017/FamilyLine?replicaSet=rs0
