--- a/server/.env.example
+++ b/server/.env.example
@@ -10,7 +10,7 @@ S3_USESSL=true //not required
 MODE=dev //dev or prod
 
 
-MONGODB_CONNECTION_STRING=mongodb://localhost:27017/FamilyLine
+MONGODB_CONNECTION_STRING=mongodb://127.0.0.1:27017/FamilyLine?replicaSet=rs0
 
 AUTH_ACCESS_TOKEN_TIMEOUT=600 //10 m (in seconds)
 AUTH_REFRESH_TOKEN_TIMEOUT=7776000 //90 days (in seconds) 
