--- a/encoder/package.json
+++ b/encoder/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "An encoding micro service for FamilyLine",
   "main": "encoder.js",
+  "type": "module",
   "scripts": {
+    "start": "node ./encoder.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Joseph Hassell (joseph@hassell.dev)",
