--- a/encoder/package.json
+++ b/encoder/package.json
@@ -11,9 +11,14 @@
   "author": "Joseph Hassell (joseph@hassell.dev)",
   "license": "MIT",
   "dependencies": {
-    "sharp": "^0.30.2",
+    "@smcloudstore/generic-s3": "^0.2.0",
+    "blurhash": "^1.1.5",
+    "dotenv": "^16.0.0",
+    "heic-convert": "^1.2.4",
     "mongodb-queue-up": "^5.0.1",
     "mongoose": "^6.2.4",
-    "dotenv": "^16.0.0"
+    "sharp": "^0.30.2",
+    "smcloudstore": "^0.2.1",
+    "uuid": "^8.3.2"
   }
 }
