--- a/client/ios/Runner/Info.plist
+++ b/client/ios/Runner/Info.plist
@@ -47,5 +47,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIBackgroundModes</key>
+	<array>
+	<string>fetch</string>
+	<string>remote-notification</string>
+	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allows you to upload your pictures and videos to the app.</string>
 </dict>
 </plist>
