--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.1
-  responsive_grid: ^2.0.0
   cupertino_icons: ^1.0.2
   adaptive_navigation: ^0.0.5
   go_router: ^3.0.1
@@ -42,6 +41,9 @@ dependencies:
   flutter_blurhash: ^0.6.4
   cached_network_image: ^3.2.0
   universal_html: ^2.0.8
+  file_picker: ^4.5.1
+  universal_io: ^2.0.4
+  queue: ^3.1.0+1
 
 
 dev_dependencies:
