Added Macos theme and fixed uploading

--- a/encoder/.env.example
+++ b/encoder/.env.example
@@ -11,3 +11,7 @@ MODE=dev //dev or prod
 
 
 MONGODB_CONNECTION_STRING=mongodb://127.0.0.1:27017/FamilyLine?replicaSet=rs0
+
+
+CONCURRENT_JOB_LIMIT=5
+JOB_TIMEOUT_S=60 //amount of seconds before a job is considered dead
