--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   file_picker: ^4.5.1
   universal_io: ^2.0.4
   queue: ^3.1.0+1
+  macos_ui: ^0.12.2+1
+  mime: ^1.0.1
 
 
 dev_dependencies:
