--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   queue: ^3.1.0+1
   macos_ui: ^0.12.2+1
   mime: ^1.0.1
+  json_annotation: ^4.4.0
+  isar: ^2.2.1
+  isar_flutter_libs: ^2.2.1
+  
+  
 
 
 dev_dependencies:
@@ -59,7 +64,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   hive_generator: ^1.1.2
-  build_runner: ^2.1.7
+  json_serializable: ^6.1.5
+  build_runner: ^2.1.8
+  isar_generator: ^2.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
