--- a/server/.env.example
+++ b/server/.env.example
@@ -4,8 +4,8 @@ S3_APPLICATION_KEY=56ads4f56ds4f65afd4s65af4ds65f4sd56a4f6a5sd46f4ds6f4
 S3_BUCKET=somebucketname // May have to make this all lowercase
 S3_REGION=us-west-000
 S3_PATH_STYLE=false //true if using old path style bucket. best to leave as false (for local development or hosting best set to true)
-S3_PORT=443 //not required
-S3_USESSL=true //not required
+S3_PORT=443
+S3_USESSL=true 
 
 MODE=dev //dev or prod
 
