--- a/encoder/package.json
+++ b/encoder/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node ./encoder.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prebuild": "cp -R ../server/lib/mongoose ./mongoose"
   },
   "author": "Joseph Hassell (joseph@hassell.dev)",
   "license": "MIT",
