--- a/encoder/package.json
+++ b/encoder/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@smcloudstore/generic-s3": "^0.2.0",
     "blurhash": "^1.1.5",
+    "dist-exiftool": "^10.53.0",
     "dotenv": "^16.0.0",
     "heic-convert": "^1.2.4",
     "mongodb-queue-up": "^5.0.1",
     "mongoose": "^6.2.4",
+    "node-exiftool": "^2.3.0",
     "sharp": "^0.30.2",
     "smcloudstore": "^0.2.1",
     "uuid": "^8.3.2"
