--- a/server/package.json
+++ b/server/package.json
@@ -15,16 +15,18 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dist-exiftool": "^10.53.0",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
-    "imagemin": "^8.0.1",
-    "imagemin-webp": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
+    "luxon": "^2.3.1",
     "mongodb-queue-up": "^5.0.1",
     "mongoose": "^6.2.4",
     "mongoose-paginate-v2": "^1.6.3",
     "morgan": "~1.9.1",
+    "ms": "^2.1.3",
     "multer": "^1.4.4",
+    "node-exiftool": "^2.3.0",
     "sharp": "^0.30.2",
     "smcloudstore": "^0.2.1",
     "uuid": "^8.3.2"
