--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -1,5 +1,5 @@
 name: client
-description: A new Flutter project.
+description: Client application for FamilyLine
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,7 +38,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_secure_storage: ^5.0.2
   jwt_decoder: ^2.0.1
-  flutter_blurhash: ^0.6.4
+  flutter_blurhash: ^0.6.6
   cached_network_image: ^3.2.0
   universal_html: ^2.0.8
   file_picker: ^4.5.1
@@ -50,9 +50,10 @@ dependencies:
   isar: ^2.2.1
   isar_flutter_libs: ^2.2.1
   path_provider: ^2.0.9
+  sqlite3: ^1.6.2
   
-  
-
+dependency_overrides:
+  js: ^0.6.4 # fix conflict between sqlite3 and flutter_web_plugins
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ dev_dependencies:
   json_serializable: ^6.1.5
   build_runner: ^2.1.8
   isar_generator: ^2.2.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
